--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
         "clsx": "^2.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "tailwind-merge": "^2.4.0"
+        "tailwind-merge": "^2.4.0",
+        "downloadjs": "^1.4.7",
+        "html-to-image": "^1.11.11",
+        "katex": "^0.16.11",
+        "lucide-react": "^0.408.0",
+        "next": "14.2.3",
+        "react-color-palette": "^7.2.1",
+        "react-hot-toast": "^2.4.1"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.6.1",
@@ -34,6 +41,8 @@
         "@storybook/test": "^8.2.2",
         "@types/chrome": "^0.0.268",
         "@types/react": "^18.3.3",
+        "@types/downloadjs": "^1.4.6",
+        "@types/katex": "^0.16.7",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^7.13.1",
         "@typescript-eslint/parser": "^7.13.1",
