--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     },
     "dependencies": {
         "clsx": "^2.1.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "tailwind-merge": "^2.4.0",
         "downloadjs": "^1.4.7",
         "html-to-image": "^1.11.11",
         "katex": "^0.16.11",
         "lucide-react": "^0.408.0",
         "next": "14.2.3",
+        "react": "^18.3.1",
         "react-color-palette": "^7.2.1",
-        "react-hot-toast": "^2.4.1"
+        "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.4.1",
+        "tailwind-merge": "^2.4.0"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.6.1",
@@ -40,14 +40,15 @@
         "@storybook/react-vite": "^8.2.2",
         "@storybook/test": "^8.2.2",
         "@types/chrome": "^0.0.268",
-        "@types/react": "^18.3.3",
         "@types/downloadjs": "^1.4.6",
         "@types/katex": "^0.16.7",
+        "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^7.13.1",
         "@typescript-eslint/parser": "^7.13.1",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
+        "daisyui": "^4.12.10",
         "eslint": "^8.57.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^9.1.0",
